# intrative_admin-for-av-ws

./: Cargo.toml  README.md
locales/: en.yml  zh-CN.yml
src/: main.rs  utils.rs
src/admin/: auth.rs  entry.rs  mod.rs  query.rs  set_public_room.rs  structs_types.rs  tcp.rs
src/admin/db/: dummy.rs  mod.rs  traits.rs
