[package]
name = "intrative_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2" , features = ["full"] }
tokio-util = {version = "0.7.4" ,	features=["codec"]}
futures = "0.3.18"
promkit = "0.1.2"
once_cell = "1.10.0"
rust-i18n = "0"
dotenv = "0.15.0"
async-trait = "0.1.51"
sled = "0.34.7"
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"


[package.metadata.i18n]
 available-locales = ["en", "zh-CN"]

[features]
no_db = []